[gd_scene load_steps=5 format=3 uid="uid://oxvwmxpk4tp7"]

[ext_resource type="Script" path="res://Main.gd" id="1_xlgft"]
[ext_resource type="PackedScene" uid="uid://chvni70so1s7u" path="res://Scenes/mob.tscn" id="2_g421u"]
[ext_resource type="PackedScene" uid="uid://bqpkxht3mx8l8" path="res://Player/Player.tscn" id="4_bghvw"]

[sub_resource type="Curve2D" id="Curve2D_isdsk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_xlgft")
mob_scene = ExtResource("2_g421u")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)
gizmo_extents = 109.1

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_isdsk")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Player" parent="." instance=ExtResource("4_bghvw")]
position = Vector2(240, 450)

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
